debug/istio-study/workload/VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: whoami-vs
spec:
  hosts:
    - whoami.com
  gateways:
    - whoami-gw
    - mesh
  http:
    - route:
        - destination:
            host: whoami.internal.com
            port:
              number: 80
